fixed chat going out of bounds

--- a/frontend/io-webapp/src/session/chat.css
+++ b/frontend/io-webapp/src/session/chat.css
@@ -5,7 +5,8 @@
     flex-direction: column-reverse;
     align-items: left;
     width: 100%;
-    height: 100%;
+    max-height: calc(100% - 36px);
+    min-height: calc(100% - 36px);
   }
 
   .chatContent {
@@ -57,17 +58,13 @@
   .chatFooter {
     border-style: solid;
     border-width: 2px 0px 0px 0px;
-    min-height: 15%;
+    /* height: 9vh; */
+    height: 15%;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    /* position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0; */
   }
 
   .chatText {
